X3 C++ PluginFramework

2011-07-14

    * Add 'x3core' ATLCOM project.
    * The default path of GetAppWorkPath() is %LocalAppData% on Vista
      and later, otherwise is the executable file's folder.

------v1.1.2------

2011-07-10

    * Add UtilFunc/LoadDllHelper.h
    * Add ComHook plugin and TestPlatform to hook CoCreateInstance on Windows.
    * COM plugin is marked as delay-loading plugin.
    * Include winver.h in *.rc

2011-07-08

    * Refact and optimize delay-loading code in PluginManager.
      Call AddObserverPlugin() only when plugin is loading.
    * Move interface file to Interface\ObserverExample in ChangeObserverExample.
    * Add a test case for observer delay-load feature.
    * Add class cache UML diagram.

------v1.1.1------

2011-07-05

    * Add UML diagram.
    * Remove 'ASSERT(0 == nul)' in XComPtr.h
    * Add notes in Ix_PluginLoader.h and XModuleImpl.h

2011-07-04

    * Add GetLocalAppDataPath() using SHGetKnownFolderPath for Vista, Win7 and Win2008.
    * Move delay-load implement code into DelayLoad.cpp

2011-07-01

    * Support delay-load feature for logging observer plugins.

------v1.1.0------

2011-06-30

    * Remove RTTI (not use dynamic_cast).
    * Add XClassMacro.h
    * Remove FileUtility/Plugin.cpp
    * Add namespace for GetAppWorkPath().

------v1.0.11------

2011-06-27

    * Change vector to list in StringTable, ChangeManager and PluginManager.
    * Add x3::has_value() in vecfunc.h.

2011-06-21

    * Remove IsDelayPlugin(), so all plugins will be delay loaded.
    * Refact in Cx_PluginManager.
    * Avoid some callings between plugins when loading plugins.
    * Call DestroyWnd() in CEmbedWnd::~CEmbedWnd().
    * Fix copy construction of Cx_Interface and Cx_ConfigSection for vc60.
    * Returns true if a plugin has already loaded before in Cx_PluginLoader::LoadPluginOrDelay().

2011-06-19

    * Add '-shared' to C_FLAGS only for plugins (lib*.so, except *.app).